[project]
name = "ComfyUI_multi-area-condition-node"
description = "Fix Nov. 2024, Davemane42's Custom Node for ComfyUI"
version = "1.0.3"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/GegenDenTag/ComfyUI-multi-area-condition-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gdt"
DisplayName = "Multi Area Conditioning"
Icon = ""
